make external links open in newtab (and fixed an alignment issue)

--- a/sass/main.css
+++ b/sass/main.css
@@ -20,11 +20,9 @@ body {
   font-size: 1rem;
   margin: 0; }
   body .header {
-    margin: 0;
-    width: 100%;
-    height: 2rem; }
+    margin: 5% 20% 0 20%; }
     body .header .menu {
-      margin: 5% 20% 0 20%;
+      margin: 0 -12px;
       display: flex;
       flex-wrap: wrap;
       border-bottom: solid #000000;
